# Daymap-Notifier

./: .gitignore  README.md  pyproject.toml
src/daymap_notifier/: daymap.py  main.py  settings.py
