[project]
name = "daymap-notifier"
version = "0.1.0"
description = "A program that notifies you what your next subject is in your daymap timetable."
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "bs4>=0.0.2",
    "desktop-notifier>=6.2.0",
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "requests>=2.32.5",
    "textual>=8.1.1",
]
